gac_sb/objects/AppATformationPortail__c.object
<CustomObject>
    <description>Application AT</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EmailReceptionInscriptions__c</fullName>
        <defaultValue>&quot;tweber@synefo.fr&quot;</defaultValue>
        <label>Email de réception des inscriptions</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Programme__c</fullName>
        <label>Programme</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <label>Formation Portail</label>
    <nameField>
        <label>Titre de la formation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formations Portail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>